# pares-bastion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: ci.yml
docs/: ROADMAP.md  admin-guide.md  licensing-and-partitions.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: netops-scan
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/licensing/: commands.rs  mod.rs  models.rs  tests.rs  verify.rs
src-tauri/src/partitions/: commands.rs  models.rs  service.rs
src-tauri/src/policy/: mod.rs
src/lib/: types.ts
src/lib/components/: AppShell.svelte  ExportButton.svelte  LicenseGate.svelte  ProgressBar.svelte
src/lib/data/: mock-ansible.ts  mock-config.ts  mock-health.ts  mock-inventory.ts  mock-vault.ts
src/lib/domain/: device-categories.ts  document-pinning.ts  entitlements.ts  feature-matrix.ts  license.ts  partition.ts
src/lib/guards/: partition-guard.ts
src/lib/services/: ansible.ts  config.ts  device.ts  export.ts  health.ts  license-service.ts  partition-service.ts  scanner.ts  vault.ts
src/lib/stores/: document-store.svelte.ts  license-store.svelte.ts  license.svelte.ts  partition-store.svelte.ts  settings.svelte.ts  terminal.svelte.ts  tui.svelte.ts  tunnels.svelte.ts  yaml-settings.svelte.ts
src/routes/: +layout.ts  +page.svelte  +page.ts
(+26 files in other folders)
