[package]
name = "pares-bastion"
version = "0.1.0"
edition = "2021"
description = "Infrastructure operations platform for network and systems engineers"
authors = ["Plures"]
license = "BSL-1.1"
license-file = "../LICENSE"

[lib]
name = "pares_bastion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pares-bastion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
ed25519-dalek = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
